[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/visitor1.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[node name="Panel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -683.0
margin_top = -170.934
margin_right = 683.0
margin_bottom = -82.934
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.5
margin_top = -25.0
margin_right = 107.5
margin_bottom = 25.0
custom_fonts/font = SubResource( 3 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="restart_clicked" from="." to="." method="_on_restart_clicked"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
